test/compile-fail/resolution/redefinition/many/top.rhdl
struct a {}
enum a {}
trait a {}
const a: bool = false;
type a = bool;
